--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "project-on-webpack",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,16 @@
   },
   "homepage": "https://github.com/Zmennn/project-on-webpack#readme",
   "dependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2"
-  }
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.3.2",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.9",
+    "babel-loader": "^8.2.2"
+  },
+  "description": ""
 }
