--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Zmennn/project-on-webpack#readme",
   "dependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.1",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
